flex/streamy.output
Nonterminals useless in grammar

    code


Rules useless in grammar

   37 code: T_OPEN_CURLY IF_STATEMENT
   38     | code T_CLOSE_CURLY
   39     | VARIABLE
   40     | STRING_LITERAL
   41     | IF_STATEMENT
   42     | ELSE_STATEMENT
   43     | T_EQUAL
   44     | code VARIABLE T_EQUAL STRING_LITERAL code
   45     | code ELSE_STATEMENT code


State 40 conflicts: 1 shift/reduce
State 42 conflicts: 1 shift/reduce
State 44 conflicts: 1 shift/reduce
State 46 conflicts: 1 shift/reduce
State 48 conflicts: 1 shift/reduce
State 50 conflicts: 1 shift/reduce
State 52 conflicts: 1 shift/reduce
State 54 conflicts: 1 shift/reduce


Grammar

    0 $accept: calculation $end

    1 calculation: %empty
    2            | calculation line

    3 line: T_NEWLINE
    4     | mixed_expression T_NEWLINE
    5     | expression T_NEWLINE
    6     | T_QUIT T_NEWLINE

    7 mixed_expression: T_FLOAT
    8                 | T_OPEN_CURLY
    9                 | T_CLOSE_CURLY
   10                 | IF_STATEMENT
   11                 | ELSE_STATEMENT
   12                 | mixed_expression T_PLUS mixed_expression
   13                 | mixed_expression T_MINUS mixed_expression
   14                 | mixed_expression T_MULTIPLY mixed_expression
   15                 | mixed_expression T_DIVIDE mixed_expression
   16                 | T_LEFT mixed_expression T_RIGHT
   17                 | expression T_PLUS mixed_expression
   18                 | expression T_MINUS mixed_expression
   19                 | expression T_MULTIPLY mixed_expression
   20                 | expression T_DIVIDE mixed_expression
   21                 | mixed_expression T_PLUS expression
   22                 | mixed_expression T_MINUS expression
   23                 | mixed_expression T_MULTIPLY expression
   24                 | mixed_expression T_DIVIDE expression
   25                 | expression T_DIVIDE expression
   26                 | T_OPEN_CURLY IF_STATEMENT expression T_CLOSE_CURLY
   27                 | test
   28                 | mixed_expression T_OPEN_CURLY IF_STATEMENT VARIABLE T_EQUAL STRING_LITERAL

   29 expression: T_INT
   30           | STRING_LITERAL
   31           | VARIABLE
   32           | expression T_PLUS expression
   33           | expression T_MINUS expression
   34           | expression T_MULTIPLY expression
   35           | T_LEFT expression T_RIGHT
   36           | VARIABLE T_EQUAL STRING_LITERAL


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_INT <ival> (258) 29
    STRING_LITERAL <ival> (259) 28 30 36
    T_FLOAT <fval> (260) 7
    T_CLOSE_CURLY (261) 9 26
    T_OPEN_CURLY (262) 8 26 28
    IF_STATEMENT (263) 10 26 28
    ELSE_STATEMENT (264) 11
    test <const char*> (265) 27
    T_EQUAL (266) 28 36
    VARIABLE (267) 28 31 36
    T_PLUS (268) 12 17 21 32
    T_MINUS (269) 13 18 22 33
    T_MULTIPLY (270) 14 19 23 34
    T_DIVIDE (271) 15 20 24 25
    T_LEFT (272) 16 35
    T_RIGHT (273) 16 35
    T_NEWLINE (274) 3 4 5 6
    T_QUIT (275) 6


Nonterminals, with rules where they appear

    $accept (21)
        on left: 0
    calculation (22)
        on left: 1 2
        on right: 0 2
    line (23)
        on left: 3 4 5 6
        on right: 2
    mixed_expression <fval> (24)
        on left: 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28
        on right: 4 12 13 14 15 16 17 18 19 20 21 22 23 24 28
    expression <ival> (25)
        on left: 29 30 31 32 33 34 35 36
        on right: 5 17 18 19 20 21 22 23 24 25 26 32 33 34 35


State 0

    0 $accept: • calculation $end

    $default  reduce using rule 1 (calculation)

    calculation  go to state 1


State 1

    0 $accept: calculation • $end
    2 calculation: calculation • line

    $end            shift, and go to state 2
    T_INT           shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    T_FLOAT         shift, and go to state 5
    T_CLOSE_CURLY   shift, and go to state 6
    T_OPEN_CURLY    shift, and go to state 7
    IF_STATEMENT    shift, and go to state 8
    ELSE_STATEMENT  shift, and go to state 9
    test            shift, and go to state 10
    VARIABLE        shift, and go to state 11
    T_LEFT          shift, and go to state 12
    T_NEWLINE       shift, and go to state 13
    T_QUIT          shift, and go to state 14

    line              go to state 15
    mixed_expression  go to state 16
    expression        go to state 17


State 2

    0 $accept: calculation $end •

    $default  accept


State 3

   29 expression: T_INT •

    $default  reduce using rule 29 (expression)


State 4

   30 expression: STRING_LITERAL •

    $default  reduce using rule 30 (expression)


State 5

    7 mixed_expression: T_FLOAT •

    $default  reduce using rule 7 (mixed_expression)


State 6

    9 mixed_expression: T_CLOSE_CURLY •

    $default  reduce using rule 9 (mixed_expression)


State 7

    8 mixed_expression: T_OPEN_CURLY •
   26                 | T_OPEN_CURLY • IF_STATEMENT expression T_CLOSE_CURLY

    IF_STATEMENT  shift, and go to state 18

    $default  reduce using rule 8 (mixed_expression)


State 8

   10 mixed_expression: IF_STATEMENT •

    $default  reduce using rule 10 (mixed_expression)


State 9

   11 mixed_expression: ELSE_STATEMENT •

    $default  reduce using rule 11 (mixed_expression)


State 10

   27 mixed_expression: test •

    $default  reduce using rule 27 (mixed_expression)


State 11

   31 expression: VARIABLE •
   36           | VARIABLE • T_EQUAL STRING_LITERAL

    T_EQUAL  shift, and go to state 19

    $default  reduce using rule 31 (expression)


State 12

   16 mixed_expression: T_LEFT • mixed_expression T_RIGHT
   35 expression: T_LEFT • expression T_RIGHT

    T_INT           shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    T_FLOAT         shift, and go to state 5
    T_CLOSE_CURLY   shift, and go to state 6
    T_OPEN_CURLY    shift, and go to state 7
    IF_STATEMENT    shift, and go to state 8
    ELSE_STATEMENT  shift, and go to state 9
    test            shift, and go to state 10
    VARIABLE        shift, and go to state 11
    T_LEFT          shift, and go to state 12

    mixed_expression  go to state 20
    expression        go to state 21


State 13

    3 line: T_NEWLINE •

    $default  reduce using rule 3 (line)


State 14

    6 line: T_QUIT • T_NEWLINE

    T_NEWLINE  shift, and go to state 22


State 15

    2 calculation: calculation line •

    $default  reduce using rule 2 (calculation)


State 16

    4 line: mixed_expression • T_NEWLINE
   12 mixed_expression: mixed_expression • T_PLUS mixed_expression
   13                 | mixed_expression • T_MINUS mixed_expression
   14                 | mixed_expression • T_MULTIPLY mixed_expression
   15                 | mixed_expression • T_DIVIDE mixed_expression
   21                 | mixed_expression • T_PLUS expression
   22                 | mixed_expression • T_MINUS expression
   23                 | mixed_expression • T_MULTIPLY expression
   24                 | mixed_expression • T_DIVIDE expression
   28                 | mixed_expression • T_OPEN_CURLY IF_STATEMENT VARIABLE T_EQUAL STRING_LITERAL

    T_OPEN_CURLY  shift, and go to state 23
    T_PLUS        shift, and go to state 24
    T_MINUS       shift, and go to state 25
    T_MULTIPLY    shift, and go to state 26
    T_DIVIDE      shift, and go to state 27
    T_NEWLINE     shift, and go to state 28


State 17

    5 line: expression • T_NEWLINE
   17 mixed_expression: expression • T_PLUS mixed_expression
   18                 | expression • T_MINUS mixed_expression
   19                 | expression • T_MULTIPLY mixed_expression
   20                 | expression • T_DIVIDE mixed_expression
   25                 | expression • T_DIVIDE expression
   32 expression: expression • T_PLUS expression
   33           | expression • T_MINUS expression
   34           | expression • T_MULTIPLY expression

    T_PLUS      shift, and go to state 29
    T_MINUS     shift, and go to state 30
    T_MULTIPLY  shift, and go to state 31
    T_DIVIDE    shift, and go to state 32
    T_NEWLINE   shift, and go to state 33


State 18

   26 mixed_expression: T_OPEN_CURLY IF_STATEMENT • expression T_CLOSE_CURLY

    T_INT           shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    VARIABLE        shift, and go to state 11
    T_LEFT          shift, and go to state 34

    expression  go to state 35


State 19

   36 expression: VARIABLE T_EQUAL • STRING_LITERAL

    STRING_LITERAL  shift, and go to state 36


State 20

   12 mixed_expression: mixed_expression • T_PLUS mixed_expression
   13                 | mixed_expression • T_MINUS mixed_expression
   14                 | mixed_expression • T_MULTIPLY mixed_expression
   15                 | mixed_expression • T_DIVIDE mixed_expression
   16                 | T_LEFT mixed_expression • T_RIGHT
   21                 | mixed_expression • T_PLUS expression
   22                 | mixed_expression • T_MINUS expression
   23                 | mixed_expression • T_MULTIPLY expression
   24                 | mixed_expression • T_DIVIDE expression
   28                 | mixed_expression • T_OPEN_CURLY IF_STATEMENT VARIABLE T_EQUAL STRING_LITERAL

    T_OPEN_CURLY  shift, and go to state 23
    T_PLUS        shift, and go to state 24
    T_MINUS       shift, and go to state 25
    T_MULTIPLY    shift, and go to state 26
    T_DIVIDE      shift, and go to state 27
    T_RIGHT       shift, and go to state 37


State 21

   17 mixed_expression: expression • T_PLUS mixed_expression
   18                 | expression • T_MINUS mixed_expression
   19                 | expression • T_MULTIPLY mixed_expression
   20                 | expression • T_DIVIDE mixed_expression
   25                 | expression • T_DIVIDE expression
   32 expression: expression • T_PLUS expression
   33           | expression • T_MINUS expression
   34           | expression • T_MULTIPLY expression
   35           | T_LEFT expression • T_RIGHT

    T_PLUS      shift, and go to state 29
    T_MINUS     shift, and go to state 30
    T_MULTIPLY  shift, and go to state 31
    T_DIVIDE    shift, and go to state 32
    T_RIGHT     shift, and go to state 38


State 22

    6 line: T_QUIT T_NEWLINE •

    $default  reduce using rule 6 (line)


State 23

   28 mixed_expression: mixed_expression T_OPEN_CURLY • IF_STATEMENT VARIABLE T_EQUAL STRING_LITERAL

    IF_STATEMENT  shift, and go to state 39


State 24

   12 mixed_expression: mixed_expression T_PLUS • mixed_expression
   21                 | mixed_expression T_PLUS • expression

    T_INT           shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    T_FLOAT         shift, and go to state 5
    T_CLOSE_CURLY   shift, and go to state 6
    T_OPEN_CURLY    shift, and go to state 7
    IF_STATEMENT    shift, and go to state 8
    ELSE_STATEMENT  shift, and go to state 9
    test            shift, and go to state 10
    VARIABLE        shift, and go to state 11
    T_LEFT          shift, and go to state 12

    mixed_expression  go to state 40
    expression        go to state 41


State 25

   13 mixed_expression: mixed_expression T_MINUS • mixed_expression
   22                 | mixed_expression T_MINUS • expression

    T_INT           shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    T_FLOAT         shift, and go to state 5
    T_CLOSE_CURLY   shift, and go to state 6
    T_OPEN_CURLY    shift, and go to state 7
    IF_STATEMENT    shift, and go to state 8
    ELSE_STATEMENT  shift, and go to state 9
    test            shift, and go to state 10
    VARIABLE        shift, and go to state 11
    T_LEFT          shift, and go to state 12

    mixed_expression  go to state 42
    expression        go to state 43


State 26

   14 mixed_expression: mixed_expression T_MULTIPLY • mixed_expression
   23                 | mixed_expression T_MULTIPLY • expression

    T_INT           shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    T_FLOAT         shift, and go to state 5
    T_CLOSE_CURLY   shift, and go to state 6
    T_OPEN_CURLY    shift, and go to state 7
    IF_STATEMENT    shift, and go to state 8
    ELSE_STATEMENT  shift, and go to state 9
    test            shift, and go to state 10
    VARIABLE        shift, and go to state 11
    T_LEFT          shift, and go to state 12

    mixed_expression  go to state 44
    expression        go to state 45


State 27

   15 mixed_expression: mixed_expression T_DIVIDE • mixed_expression
   24                 | mixed_expression T_DIVIDE • expression

    T_INT           shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    T_FLOAT         shift, and go to state 5
    T_CLOSE_CURLY   shift, and go to state 6
    T_OPEN_CURLY    shift, and go to state 7
    IF_STATEMENT    shift, and go to state 8
    ELSE_STATEMENT  shift, and go to state 9
    test            shift, and go to state 10
    VARIABLE        shift, and go to state 11
    T_LEFT          shift, and go to state 12

    mixed_expression  go to state 46
    expression        go to state 47


State 28

    4 line: mixed_expression T_NEWLINE •

    $default  reduce using rule 4 (line)


State 29

   17 mixed_expression: expression T_PLUS • mixed_expression
   32 expression: expression T_PLUS • expression

    T_INT           shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    T_FLOAT         shift, and go to state 5
    T_CLOSE_CURLY   shift, and go to state 6
    T_OPEN_CURLY    shift, and go to state 7
    IF_STATEMENT    shift, and go to state 8
    ELSE_STATEMENT  shift, and go to state 9
    test            shift, and go to state 10
    VARIABLE        shift, and go to state 11
    T_LEFT          shift, and go to state 12

    mixed_expression  go to state 48
    expression        go to state 49


State 30

   18 mixed_expression: expression T_MINUS • mixed_expression
   33 expression: expression T_MINUS • expression

    T_INT           shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    T_FLOAT         shift, and go to state 5
    T_CLOSE_CURLY   shift, and go to state 6
    T_OPEN_CURLY    shift, and go to state 7
    IF_STATEMENT    shift, and go to state 8
    ELSE_STATEMENT  shift, and go to state 9
    test            shift, and go to state 10
    VARIABLE        shift, and go to state 11
    T_LEFT          shift, and go to state 12

    mixed_expression  go to state 50
    expression        go to state 51


State 31

   19 mixed_expression: expression T_MULTIPLY • mixed_expression
   34 expression: expression T_MULTIPLY • expression

    T_INT           shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    T_FLOAT         shift, and go to state 5
    T_CLOSE_CURLY   shift, and go to state 6
    T_OPEN_CURLY    shift, and go to state 7
    IF_STATEMENT    shift, and go to state 8
    ELSE_STATEMENT  shift, and go to state 9
    test            shift, and go to state 10
    VARIABLE        shift, and go to state 11
    T_LEFT          shift, and go to state 12

    mixed_expression  go to state 52
    expression        go to state 53


State 32

   20 mixed_expression: expression T_DIVIDE • mixed_expression
   25                 | expression T_DIVIDE • expression

    T_INT           shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    T_FLOAT         shift, and go to state 5
    T_CLOSE_CURLY   shift, and go to state 6
    T_OPEN_CURLY    shift, and go to state 7
    IF_STATEMENT    shift, and go to state 8
    ELSE_STATEMENT  shift, and go to state 9
    test            shift, and go to state 10
    VARIABLE        shift, and go to state 11
    T_LEFT          shift, and go to state 12

    mixed_expression  go to state 54
    expression        go to state 55


State 33

    5 line: expression T_NEWLINE •

    $default  reduce using rule 5 (line)


State 34

   35 expression: T_LEFT • expression T_RIGHT

    T_INT           shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    VARIABLE        shift, and go to state 11
    T_LEFT          shift, and go to state 34

    expression  go to state 56


State 35

   26 mixed_expression: T_OPEN_CURLY IF_STATEMENT expression • T_CLOSE_CURLY
   32 expression: expression • T_PLUS expression
   33           | expression • T_MINUS expression
   34           | expression • T_MULTIPLY expression

    T_CLOSE_CURLY  shift, and go to state 57
    T_PLUS         shift, and go to state 58
    T_MINUS        shift, and go to state 59
    T_MULTIPLY     shift, and go to state 60


State 36

   36 expression: VARIABLE T_EQUAL STRING_LITERAL •

    $default  reduce using rule 36 (expression)


State 37

   16 mixed_expression: T_LEFT mixed_expression T_RIGHT •

    $default  reduce using rule 16 (mixed_expression)


State 38

   35 expression: T_LEFT expression T_RIGHT •

    $default  reduce using rule 35 (expression)


State 39

   28 mixed_expression: mixed_expression T_OPEN_CURLY IF_STATEMENT • VARIABLE T_EQUAL STRING_LITERAL

    VARIABLE  shift, and go to state 61


State 40

   12 mixed_expression: mixed_expression • T_PLUS mixed_expression
   12                 | mixed_expression T_PLUS mixed_expression •
   13                 | mixed_expression • T_MINUS mixed_expression
   14                 | mixed_expression • T_MULTIPLY mixed_expression
   15                 | mixed_expression • T_DIVIDE mixed_expression
   21                 | mixed_expression • T_PLUS expression
   22                 | mixed_expression • T_MINUS expression
   23                 | mixed_expression • T_MULTIPLY expression
   24                 | mixed_expression • T_DIVIDE expression
   28                 | mixed_expression • T_OPEN_CURLY IF_STATEMENT VARIABLE T_EQUAL STRING_LITERAL

    T_OPEN_CURLY  shift, and go to state 23
    T_MULTIPLY    shift, and go to state 26
    T_DIVIDE      shift, and go to state 27

    T_OPEN_CURLY  [reduce using rule 12 (mixed_expression)]
    $default      reduce using rule 12 (mixed_expression)


State 41

   17 mixed_expression: expression • T_PLUS mixed_expression
   18                 | expression • T_MINUS mixed_expression
   19                 | expression • T_MULTIPLY mixed_expression
   20                 | expression • T_DIVIDE mixed_expression
   21                 | mixed_expression T_PLUS expression •
   25                 | expression • T_DIVIDE expression
   32 expression: expression • T_PLUS expression
   33           | expression • T_MINUS expression
   34           | expression • T_MULTIPLY expression

    T_MULTIPLY  shift, and go to state 31
    T_DIVIDE    shift, and go to state 32

    $default  reduce using rule 21 (mixed_expression)


State 42

   12 mixed_expression: mixed_expression • T_PLUS mixed_expression
   13                 | mixed_expression • T_MINUS mixed_expression
   13                 | mixed_expression T_MINUS mixed_expression •
   14                 | mixed_expression • T_MULTIPLY mixed_expression
   15                 | mixed_expression • T_DIVIDE mixed_expression
   21                 | mixed_expression • T_PLUS expression
   22                 | mixed_expression • T_MINUS expression
   23                 | mixed_expression • T_MULTIPLY expression
   24                 | mixed_expression • T_DIVIDE expression
   28                 | mixed_expression • T_OPEN_CURLY IF_STATEMENT VARIABLE T_EQUAL STRING_LITERAL

    T_OPEN_CURLY  shift, and go to state 23
    T_MULTIPLY    shift, and go to state 26
    T_DIVIDE      shift, and go to state 27

    T_OPEN_CURLY  [reduce using rule 13 (mixed_expression)]
    $default      reduce using rule 13 (mixed_expression)


State 43

   17 mixed_expression: expression • T_PLUS mixed_expression
   18                 | expression • T_MINUS mixed_expression
   19                 | expression • T_MULTIPLY mixed_expression
   20                 | expression • T_DIVIDE mixed_expression
   22                 | mixed_expression T_MINUS expression •
   25                 | expression • T_DIVIDE expression
   32 expression: expression • T_PLUS expression
   33           | expression • T_MINUS expression
   34           | expression • T_MULTIPLY expression

    T_MULTIPLY  shift, and go to state 31
    T_DIVIDE    shift, and go to state 32

    $default  reduce using rule 22 (mixed_expression)


State 44

   12 mixed_expression: mixed_expression • T_PLUS mixed_expression
   13                 | mixed_expression • T_MINUS mixed_expression
   14                 | mixed_expression • T_MULTIPLY mixed_expression
   14                 | mixed_expression T_MULTIPLY mixed_expression •
   15                 | mixed_expression • T_DIVIDE mixed_expression
   21                 | mixed_expression • T_PLUS expression
   22                 | mixed_expression • T_MINUS expression
   23                 | mixed_expression • T_MULTIPLY expression
   24                 | mixed_expression • T_DIVIDE expression
   28                 | mixed_expression • T_OPEN_CURLY IF_STATEMENT VARIABLE T_EQUAL STRING_LITERAL

    T_OPEN_CURLY  shift, and go to state 23

    T_OPEN_CURLY  [reduce using rule 14 (mixed_expression)]
    $default      reduce using rule 14 (mixed_expression)


State 45

   17 mixed_expression: expression • T_PLUS mixed_expression
   18                 | expression • T_MINUS mixed_expression
   19                 | expression • T_MULTIPLY mixed_expression
   20                 | expression • T_DIVIDE mixed_expression
   23                 | mixed_expression T_MULTIPLY expression •
   25                 | expression • T_DIVIDE expression
   32 expression: expression • T_PLUS expression
   33           | expression • T_MINUS expression
   34           | expression • T_MULTIPLY expression

    $default  reduce using rule 23 (mixed_expression)


State 46

   12 mixed_expression: mixed_expression • T_PLUS mixed_expression
   13                 | mixed_expression • T_MINUS mixed_expression
   14                 | mixed_expression • T_MULTIPLY mixed_expression
   15                 | mixed_expression • T_DIVIDE mixed_expression
   15                 | mixed_expression T_DIVIDE mixed_expression •
   21                 | mixed_expression • T_PLUS expression
   22                 | mixed_expression • T_MINUS expression
   23                 | mixed_expression • T_MULTIPLY expression
   24                 | mixed_expression • T_DIVIDE expression
   28                 | mixed_expression • T_OPEN_CURLY IF_STATEMENT VARIABLE T_EQUAL STRING_LITERAL

    T_OPEN_CURLY  shift, and go to state 23

    T_OPEN_CURLY  [reduce using rule 15 (mixed_expression)]
    $default      reduce using rule 15 (mixed_expression)


State 47

   17 mixed_expression: expression • T_PLUS mixed_expression
   18                 | expression • T_MINUS mixed_expression
   19                 | expression • T_MULTIPLY mixed_expression
   20                 | expression • T_DIVIDE mixed_expression
   24                 | mixed_expression T_DIVIDE expression •
   25                 | expression • T_DIVIDE expression
   32 expression: expression • T_PLUS expression
   33           | expression • T_MINUS expression
   34           | expression • T_MULTIPLY expression

    $default  reduce using rule 24 (mixed_expression)


State 48

   12 mixed_expression: mixed_expression • T_PLUS mixed_expression
   13                 | mixed_expression • T_MINUS mixed_expression
   14                 | mixed_expression • T_MULTIPLY mixed_expression
   15                 | mixed_expression • T_DIVIDE mixed_expression
   17                 | expression T_PLUS mixed_expression •
   21                 | mixed_expression • T_PLUS expression
   22                 | mixed_expression • T_MINUS expression
   23                 | mixed_expression • T_MULTIPLY expression
   24                 | mixed_expression • T_DIVIDE expression
   28                 | mixed_expression • T_OPEN_CURLY IF_STATEMENT VARIABLE T_EQUAL STRING_LITERAL

    T_OPEN_CURLY  shift, and go to state 23
    T_MULTIPLY    shift, and go to state 26
    T_DIVIDE      shift, and go to state 27

    T_OPEN_CURLY  [reduce using rule 17 (mixed_expression)]
    $default      reduce using rule 17 (mixed_expression)


State 49

   17 mixed_expression: expression • T_PLUS mixed_expression
   18                 | expression • T_MINUS mixed_expression
   19                 | expression • T_MULTIPLY mixed_expression
   20                 | expression • T_DIVIDE mixed_expression
   25                 | expression • T_DIVIDE expression
   32 expression: expression • T_PLUS expression
   32           | expression T_PLUS expression •
   33           | expression • T_MINUS expression
   34           | expression • T_MULTIPLY expression

    T_MULTIPLY  shift, and go to state 31
    T_DIVIDE    shift, and go to state 32

    $default  reduce using rule 32 (expression)


State 50

   12 mixed_expression: mixed_expression • T_PLUS mixed_expression
   13                 | mixed_expression • T_MINUS mixed_expression
   14                 | mixed_expression • T_MULTIPLY mixed_expression
   15                 | mixed_expression • T_DIVIDE mixed_expression
   18                 | expression T_MINUS mixed_expression •
   21                 | mixed_expression • T_PLUS expression
   22                 | mixed_expression • T_MINUS expression
   23                 | mixed_expression • T_MULTIPLY expression
   24                 | mixed_expression • T_DIVIDE expression
   28                 | mixed_expression • T_OPEN_CURLY IF_STATEMENT VARIABLE T_EQUAL STRING_LITERAL

    T_OPEN_CURLY  shift, and go to state 23
    T_MULTIPLY    shift, and go to state 26
    T_DIVIDE      shift, and go to state 27

    T_OPEN_CURLY  [reduce using rule 18 (mixed_expression)]
    $default      reduce using rule 18 (mixed_expression)


State 51

   17 mixed_expression: expression • T_PLUS mixed_expression
   18                 | expression • T_MINUS mixed_expression
   19                 | expression • T_MULTIPLY mixed_expression
   20                 | expression • T_DIVIDE mixed_expression
   25                 | expression • T_DIVIDE expression
   32 expression: expression • T_PLUS expression
   33           | expression • T_MINUS expression
   33           | expression T_MINUS expression •
   34           | expression • T_MULTIPLY expression

    T_MULTIPLY  shift, and go to state 31
    T_DIVIDE    shift, and go to state 32

    $default  reduce using rule 33 (expression)


State 52

   12 mixed_expression: mixed_expression • T_PLUS mixed_expression
   13                 | mixed_expression • T_MINUS mixed_expression
   14                 | mixed_expression • T_MULTIPLY mixed_expression
   15                 | mixed_expression • T_DIVIDE mixed_expression
   19                 | expression T_MULTIPLY mixed_expression •
   21                 | mixed_expression • T_PLUS expression
   22                 | mixed_expression • T_MINUS expression
   23                 | mixed_expression • T_MULTIPLY expression
   24                 | mixed_expression • T_DIVIDE expression
   28                 | mixed_expression • T_OPEN_CURLY IF_STATEMENT VARIABLE T_EQUAL STRING_LITERAL

    T_OPEN_CURLY  shift, and go to state 23

    T_OPEN_CURLY  [reduce using rule 19 (mixed_expression)]
    $default      reduce using rule 19 (mixed_expression)


State 53

   17 mixed_expression: expression • T_PLUS mixed_expression
   18                 | expression • T_MINUS mixed_expression
   19                 | expression • T_MULTIPLY mixed_expression
   20                 | expression • T_DIVIDE mixed_expression
   25                 | expression • T_DIVIDE expression
   32 expression: expression • T_PLUS expression
   33           | expression • T_MINUS expression
   34           | expression • T_MULTIPLY expression
   34           | expression T_MULTIPLY expression •

    $default  reduce using rule 34 (expression)


State 54

   12 mixed_expression: mixed_expression • T_PLUS mixed_expression
   13                 | mixed_expression • T_MINUS mixed_expression
   14                 | mixed_expression • T_MULTIPLY mixed_expression
   15                 | mixed_expression • T_DIVIDE mixed_expression
   20                 | expression T_DIVIDE mixed_expression •
   21                 | mixed_expression • T_PLUS expression
   22                 | mixed_expression • T_MINUS expression
   23                 | mixed_expression • T_MULTIPLY expression
   24                 | mixed_expression • T_DIVIDE expression
   28                 | mixed_expression • T_OPEN_CURLY IF_STATEMENT VARIABLE T_EQUAL STRING_LITERAL

    T_OPEN_CURLY  shift, and go to state 23

    T_OPEN_CURLY  [reduce using rule 20 (mixed_expression)]
    $default      reduce using rule 20 (mixed_expression)


State 55

   17 mixed_expression: expression • T_PLUS mixed_expression
   18                 | expression • T_MINUS mixed_expression
   19                 | expression • T_MULTIPLY mixed_expression
   20                 | expression • T_DIVIDE mixed_expression
   25                 | expression • T_DIVIDE expression
   25                 | expression T_DIVIDE expression •
   32 expression: expression • T_PLUS expression
   33           | expression • T_MINUS expression
   34           | expression • T_MULTIPLY expression

    $default  reduce using rule 25 (mixed_expression)


State 56

   32 expression: expression • T_PLUS expression
   33           | expression • T_MINUS expression
   34           | expression • T_MULTIPLY expression
   35           | T_LEFT expression • T_RIGHT

    T_PLUS      shift, and go to state 58
    T_MINUS     shift, and go to state 59
    T_MULTIPLY  shift, and go to state 60
    T_RIGHT     shift, and go to state 38


State 57

   26 mixed_expression: T_OPEN_CURLY IF_STATEMENT expression T_CLOSE_CURLY •

    $default  reduce using rule 26 (mixed_expression)


State 58

   32 expression: expression T_PLUS • expression

    T_INT           shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    VARIABLE        shift, and go to state 11
    T_LEFT          shift, and go to state 34

    expression  go to state 62


State 59

   33 expression: expression T_MINUS • expression

    T_INT           shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    VARIABLE        shift, and go to state 11
    T_LEFT          shift, and go to state 34

    expression  go to state 63


State 60

   34 expression: expression T_MULTIPLY • expression

    T_INT           shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    VARIABLE        shift, and go to state 11
    T_LEFT          shift, and go to state 34

    expression  go to state 64


State 61

   28 mixed_expression: mixed_expression T_OPEN_CURLY IF_STATEMENT VARIABLE • T_EQUAL STRING_LITERAL

    T_EQUAL  shift, and go to state 65


State 62

   32 expression: expression • T_PLUS expression
   32           | expression T_PLUS expression •
   33           | expression • T_MINUS expression
   34           | expression • T_MULTIPLY expression

    T_MULTIPLY  shift, and go to state 60

    $default  reduce using rule 32 (expression)


State 63

   32 expression: expression • T_PLUS expression
   33           | expression • T_MINUS expression
   33           | expression T_MINUS expression •
   34           | expression • T_MULTIPLY expression

    T_MULTIPLY  shift, and go to state 60

    $default  reduce using rule 33 (expression)


State 64

   32 expression: expression • T_PLUS expression
   33           | expression • T_MINUS expression
   34           | expression • T_MULTIPLY expression
   34           | expression T_MULTIPLY expression •

    $default  reduce using rule 34 (expression)


State 65

   28 mixed_expression: mixed_expression T_OPEN_CURLY IF_STATEMENT VARIABLE T_EQUAL • STRING_LITERAL

    STRING_LITERAL  shift, and go to state 66


State 66

   28 mixed_expression: mixed_expression T_OPEN_CURLY IF_STATEMENT VARIABLE T_EQUAL STRING_LITERAL •

    $default  reduce using rule 28 (mixed_expression)
